добавил таблицу task_assignments, поменял функцию создание задачи(добавил отправку)
